# 16_03_curs

./: .gitignore  README.md  currency_rates.json  pyproject.toml
project/: bot.py  data.json  main.py
